work on edit profile

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,8 @@
 <a [routerLink]="['/SignUp']">SignUp</a> -->
  <!-- <a [routerLink]="['/createProject']">Create Project</a>
 <a [routerLink]="['/projectlist']">Project List</a> -->
+<!-- <a [routerLink]="['/editprofile']">Edit profile</a> -->
+<!-- <a [routerLink]="['/editprofile']">Edit profile</a> -->
+
 <router-outlet></router-outlet>
 
