--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -42,8 +42,7 @@
                                             
                                         
                                             <div class="text-center mt-2">
-                                                <button class="btn" style="background-color:#035FB2; color: white;" (click)="checkUser()">Login</button>
-                                                <button class="btn" style="background-color: #389AF3;color: white;" [routerLink]="['/SignUp']">SignUp</button>
+                                                <button class="btn" style="background-color:#035FB2; color: white;" (click)="onSubmit()">Login</button>
                                             </div>
                                             </form>
                                         </div>
