--- a/src/app/pages/create-project/create-project.component.css
+++ b/src/app/pages/create-project/create-project.component.css
@@ -51,10 +51,10 @@
 
 
 .profile {
-    font-size: large;
-    text-align: end;
-    margin-top: 30px;
-
+    display: flex;
+  flex-direction: column;
+  align-items: end;
+   
   }
 
   .profile mat-icon {
@@ -66,6 +66,23 @@
   .profile span {
     display: inline-block;
     vertical-align: middle; /* Align username vertically */
+    font-size: large;
   }
   
- 
+  .btn {
+    margin-top: 10px; /* Pushes the button to the bottom */
+   margin-bottom: 7px;
+   font-size: 14px;
+   background-color: #5d8e17;
+   color: rgb(255, 255, 255);
+   border: 1px solid rgb(151, 149, 149);
+   
+  }
+
+  .btn-primary{
+    background-color: #5555ea;
+  }
+
+  .grey-icon {
+    color: grey;
+  }
