--- a/src/app/pages/edit-profile/edit-profile.component.css
+++ b/src/app/pages/edit-profile/edit-profile.component.css
@@ -1,19 +1,3 @@
-#button{
-    border-radius: 15px;
-}
-
-.search-container {
-    border-bottom: 1px solid #ced4da; /* Color of the bottom border */
-    padding-bottom: 5px; /* Optional: Adjust padding as needed */
-  }
-  
-  .search-input {
-    border: none; /* Remove default input border */
-    outline: none; /* Remove input focus outline */
-    width: 100%; /* Optional: Adjust width as needed */
-  }
-
-   
 .bg-image {
     background-image: url('/../assets/Header-bg.svg');
     color: white;
@@ -65,19 +49,6 @@
     }
 }
 
-.actions{
-    text-align: center;
-}
-
-.custom-dropdown {
-    border: none;
-    outline: none;
-    box-shadow: none;
-    text-align: center;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-}
 
 .profile {
     font-size: large;
@@ -96,12 +67,44 @@
     display: inline-block;
     vertical-align: middle; /* Align username vertically */
   }
-
-  .icon.disabled {
-    opacity: 0.0; /* Adjust the opacity to visually indicate the disabled state */
-    pointer-events: none; /* Disable pointer events to prevent interactions with the icon */
-}
-
-.grey-icon {
+  
+  .grey-icon {
     color: grey;
   }
+
+  h5{
+    font-size: large;
+    font-weight: 550;
+    text-align: center;
+  }
+ 
+ .formclass{
+    max-width: 600px;
+    margin: auto;
+    margin-top: 40px;
+    border: solid rgb(160, 160, 160) 0.5px;
+    border-radius: 17px;
+    text-align: center;
+ }
+
+ .form-control{
+  border: none;
+  flex: 1;
+ }
+
+ .form-group {
+  margin-bottom: 1.5rem;
+  display: flex;
+  align-items: center;
+}
+
+.form-label {
+  flex: 0 0 120px; /* Adjust the width of the label */
+  margin-right: 10px; /* Add some space between label and input */
+  font-size: large;
+}
+ 
+ .icon.disabled {
+  opacity: 0.0; /* Adjust the opacity to visually indicate the disabled state */
+  pointer-events: none; /* Disable pointer events to prevent interactions with the icon */
+}
