--- a/src/app/pages/signup/signup.component.css
+++ b/src/app/pages/signup/signup.component.css
@@ -33,7 +33,6 @@
 
 .container .formSignup {
     margin-top: 30px;
-    
 }
 
 .title {
@@ -73,4 +72,22 @@
     font-size: 14px; 
     font-weight: 500;
     margin-top: 5px;
+}
+
+h5{
+    font-size: 22px;
+    font-weight: 550;
+}
+
+label{
+    font-size: 17px;
+}
+
+.form-group{
+    margin: 10px;
+    margin-top: 10px;
+}
+
+.form-control{
+    margin-top: 10px;
 }
